--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
+		"mongodb": "^3.5.8",
 		"mongoose": "^5.9.10",
-		"pokemontcgsdk": "^1.1.0"
+		"pokemontcgsdk": "^1.1.0",
+		"socket.io": "^2.3.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.3"
