--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
+		"killport": "^1.0.1",
 		"mongodb": "^3.5.8",
 		"mongoose": "^5.9.10",
 		"socket.io": "^2.3.0"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.3"
+		"nodemon": "^2.0.4"
 	}
 }
