--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"dependencies": {
 		"axios": "^0.21.1",
 		"bcryptjs": "^2.4.3",
+		"cookie-session": "^1.4.0",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
@@ -27,8 +28,8 @@
 		"jsonwebtoken": "^8.5.1",
 		"killport": "^1.0.1",
 		"mongodb": "^3.5.8",
-		"mongoose": "^5.9.10",
-		"socket.io": "^2.4.0"
+		"mongoose": "^5.12.3",
+		"socket.io": "^2.4.1"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.4"
